@@ -1509,3 +1509,28 @@ lenient_compare(char *name1, char *name2)
 	return 1;
 }
 
+/*
+ * Read the data-type from headdata
+ * mod by |DureX|, edited by psxc
+ */
+
+int
+read_headdata(struct VARS *raceI)
+{
+	int fd = 0;
+	HEADDATA hd;
+	int type = 0;
+
+	if ((fd = open(raceI->headpath, O_RDONLY)) == -1) {
+		d_log("read_headdata: failed to open(%s): %s - returning '0' as data_type\n", raceI->headpath, strerror(errno));
+		return 0;
+	}
+	if ((read(fd, &hd, sizeof(HEADDATA))) != sizeof(HEADDATA)) {
+		d_log("read_headdata: failed to read %s : %s - returning '0' as data_type\n", raceI->headpath, strerror(errno));
+		return 0;
+	}
+	type = hd.data_type;
+	close(fd);
+	return type;
+}
+
