@@ -2,6 +2,9 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.1.0a --> 1.1.x :
+		- fixed small bug in postdel that prevented it from removing progressbars in
+		  mp3-releases. Thanks goes to |DureX| for report and fix.
+		- fixed a bug in rescan that prevented it from (re-)creating mp3-symlinks.
 		- added check_for_missing_sample_dirs and create_missing_sample_link vars.
 		- updated psxc-imdb to 2.9b
 		- changed default allowed_years to include 2008 and exclude 2004
@@ -15,8 +18,8 @@ v1.1.0a --> 1.1.x :
                 - %T/%t now users racersplit* too.
 		- fixed a bug re: sort_by_group - case should now no longer matter
 		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
-		- fix small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
-		- fix small in sample_list.
+		- fixed small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
+		- fixed small bug in sample_list.
 
 v1.1.0 --> 1.1.0a : (r2414)
 		- stats in announces were broken in v1.1.0, ``hotfix''.
